@@ -7,7 +7,6 @@ import static org.junit.jupiter.api.Assertions.*;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import org.junit.jupiter.api.*;
 import java.io.*;
 import java.util.*;
 
@@ -16,7 +15,7 @@ public class MyTest {
 
     @Test
     public void checkGraphAdjacencyListBasic() {
-        GraphAdjacencyList graph = new GraphAdjacencyList();
+        AdjacencyListGraph graph = new AdjacencyListGraph();
 
         graph.addVertex(10);
         graph.addVertex(20);
@@ -24,24 +23,24 @@ public class MyTest {
         graph.addEdge(10, 20);
         graph.addEdge(10, 30);
 
-        assertEquals(Set.of(20, 30), new HashSet<>(graph.getAdjacencyVertexList(10)));
-        assertEquals(Set.of(10), new HashSet<>(graph.getAdjacencyVertexList(20)));
+        assertEquals(Set.of(20, 30), new HashSet<>(graph.getAdjacentVertices(10)));
+        assertEquals(Set.of(10), new HashSet<>(graph.getAdjacentVertices(20)));
 
         graph.deleteEdge(10, 20);
-        assertEquals(Set.of(30), new HashSet<>(graph.getAdjacencyVertexList(10)));
-        assertEquals(Collections.emptySet(), new HashSet<>(graph.getAdjacencyVertexList(20)));
+        assertEquals(Set.of(30), new HashSet<>(graph.getAdjacentVertices(10)));
+        assertEquals(Collections.emptySet(), new HashSet<>(graph.getAdjacentVertices(20)));
 
         graph.deleteVertex(30);
-        assertThrows(NoSuchElementException.class, () -> graph.getAdjacencyVertexList(30));
+        assertThrows(NoGraphElementException.class, () -> graph.getAdjacentVertices(30));
     }
 
     @Test
     public void checkGraphAdjacencyListExceptions() {
-        GraphAdjacencyList graph = new GraphAdjacencyList();
+        AdjacencyListGraph graph = new AdjacencyListGraph();
         graph.addVertex(1);
-        assertThrows(NoSuchElementException.class, () -> graph.addEdge(1, 2));
-        assertThrows(NoSuchElementException.class, () -> graph.deleteEdge(5, 1));
-        assertThrows(NoSuchElementException.class, () -> graph.getAdjacencyVertexList(100));
+        assertThrows(NoGraphElementException.class, () -> graph.addEdge(1, 2));
+        assertThrows(NoGraphElementException.class, () -> graph.deleteEdge(5, 1));
+        assertThrows(NoGraphElementException.class, () -> graph.getAdjacentVertices(100));
     }
 
     @Test
@@ -50,15 +49,15 @@ public class MyTest {
         graph.addEdge(0, 1);
         graph.addEdge(1, 2);
 
-        assertEquals(List.of(1), graph.getAdjacencyVertexList(0));
-        assertEquals(Set.of(0, 2), new HashSet<>(graph.getAdjacencyVertexList(1)));
+        assertEquals(List.of(1), graph.getAdjacentVertices(0));
+        assertEquals(Set.of(0, 2), new HashSet<>(graph.getAdjacentVertices(1)));
 
         graph.deleteEdge(1, 2);
-        assertEquals(List.of(0), graph.getAdjacencyVertexList(1));
+        assertEquals(List.of(0), graph.getAdjacentVertices(1));
 
         graph.addVertex(3);
         graph.addEdge(2, 3);
-        assertEquals(List.of(3), graph.getAdjacencyVertexList(2));
+        assertEquals(List.of(3), graph.getAdjacentVertices(2));
     }
 
     @Test
@@ -67,8 +66,8 @@ public class MyTest {
         graph.addEdge(0, 1);
         graph.addEdge(2, 3);
         graph.deleteVertex(1);
-        assertEquals(List.of(), graph.getAdjacencyVertexList(0));
-        assertEquals(List.of(2), graph.getAdjacencyVertexList(1)); // former vertex 2 now index 1
+        assertEquals(List.of(), graph.getAdjacentVertices(0));
+        assertEquals(List.of(2), graph.getAdjacentVertices(1)); // former vertex 2 now index 1
     }
 
     @Test
@@ -78,15 +77,15 @@ public class MyTest {
         graph.addEdge(1, 2);
         graph.addEdge(2, 3);
 
-        assertEquals(List.of(1), graph.getAdjacencyVertexList(0));
-        assertEquals(Set.of(0, 2), new HashSet<>(graph.getAdjacencyVertexList(1)));
+        assertEquals(List.of(1), graph.getAdjacentVertices(0));
+        assertEquals(Set.of(0, 2), new HashSet<>(graph.getAdjacentVertices(1)));
 
         graph.deleteEdge(1, 2);
-        assertEquals(List.of(0), graph.getAdjacencyVertexList(1));
+        assertEquals(List.of(0), graph.getAdjacentVertices(1));
 
         graph.addVertex(4);
         graph.addEdge(4, 0);
-        assertEquals(List.of(0), graph.getAdjacencyVertexList(4));
+        assertEquals(List.of(0), graph.getAdjacentVertices(4));
     }
 
     @Test
@@ -95,16 +94,16 @@ public class MyTest {
         graph.addEdge(0, 1);
         graph.addEdge(1, 2);
         graph.deleteVertex(1);
-        assertEquals(List.of(), graph.getAdjacencyVertexList(0));
-        assertEquals(List.of(), graph.getAdjacencyVertexList(1));
+        assertEquals(List.of(), graph.getAdjacentVertices(0));
+        assertEquals(List.of(), graph.getAdjacentVertices(1));
     }
 
     @Test
     public void checkGraphIncidenceMatrixExceptions() {
         GraphIncidenceMatrix graph = new GraphIncidenceMatrix(2);
-        assertThrows(NoSuchElementException.class, () -> graph.addEdge(0, 5));
-        assertThrows(NoSuchElementException.class, () -> graph.getAdjacencyVertexList(10));
-        assertThrows(NoSuchElementException.class, () -> graph.deleteVertex(99));
+        assertThrows(NoGraphElementException.class, () -> graph.addEdge(0, 5));
+        assertThrows(NoGraphElementException.class, () -> graph.getAdjacentVertices(10));
+        assertThrows(NoGraphElementException.class, () -> graph.deleteVertex(99));
     }
 
     @Test
@@ -118,11 +117,11 @@ public class MyTest {
             w.write("1 2 3\n");
             w.write("2 4\n");
         }
-        GraphAdjacencyList graph = new GraphAdjacencyList();
-        graph.readFromFile(tmp.getAbsolutePath());
+        AdjacencyListGraph graph = new AdjacencyListGraph();
+        graph.read(tmp.getAbsolutePath());
 
-        assertTrue(graph.getAdjacencyVertexList(1).containsAll(List.of(2, 3)));
-        assertTrue(graph.getAdjacencyVertexList(2).contains(4));
+        assertTrue(graph.getAdjacentVertices(1).containsAll(List.of(2, 3)));
+        assertTrue(graph.getAdjacentVertices(2).contains(4));
     }
 
     @Test
@@ -133,8 +132,8 @@ public class MyTest {
         }
         GraphAdjacencyMatrix graph = new GraphAdjacencyMatrix(4);
         graph.readFromFile(tmp.getAbsolutePath());
-        assertTrue(graph.getAdjacencyVertexList(0).contains(1));
-        assertTrue(graph.getAdjacencyVertexList(1).contains(2));
+        assertTrue(graph.getAdjacentVertices(0).contains(1));
+        assertTrue(graph.getAdjacentVertices(1).contains(2));
     }
 
     @Test
@@ -147,7 +146,7 @@ public class MyTest {
         }
         GraphIncidenceMatrix graph = new GraphIncidenceMatrix(4);
         graph.readFromFile(tmp.getAbsolutePath());
-        assertTrue(graph.getAdjacencyVertexList(1).contains(2));
-        assertTrue(graph.getAdjacencyVertexList(0).contains(1));
+        assertTrue(graph.getAdjacentVertices(1).contains(2));
+        assertTrue(graph.getAdjacentVertices(0).contains(1));
     }
 }
